fix: styling of scrollbar

--- a/src/Pages/Landing/LandingStyle.css
+++ b/src/Pages/Landing/LandingStyle.css
@@ -48,14 +48,25 @@
     background-color: #f5f5f5;
     border-radius: 20px 20px 0px 0px;
   }
-  
+
+/* styles userlist */
 .user-list {
+    list-style: none;
   max-height: 360px;
   overflow: scroll;
   overflow-x: hidden;
-  margin: 10px 0;
+  margin: 10px 10px;
 }
-
+/* scrollbar style */
+.user-list::-webkit-scrollbar{
+    width: 5px;
+    margin: 10px;
+}
+.user-list::-webkit-scrollbar-thumb{
+    background: lightgray;
+    border-radius: 5px;
+}
+/* user display style */
 .user-info {
   display: flex;
   align-items: center;
